# exploration-rasterizer

./: CMakeLists.txt  bench.cpp  library.cpp  library.hpp  library_avx2.cpp  library_avx512.cpp  library_cuda.cu  library_generic.cpp  library_optimized.cpp  linear_allocator.hpp  main.cpp  main.sh  math.hpp
models/cow/: texture_coordinate_indices.hpp  texture_coordinates.hpp  vertex_indices.hpp  vertices.hpp
